<resources>
    <string name="app_name">Tel-U Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Login-Register-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="back_to_login">Kembali Login</string>
</resources>
